Remove hardcoded start commands to allow per-service configuration

--- a/mcp-servers/nixpacks.toml
+++ b/mcp-servers/nixpacks.toml
@@ -1,14 +1,11 @@
 [phases.setup]
-nixPkgs = ["nodejs_20", "python311"]
+nixPkgs = ["nodejs_20", "python311", "octave"]
 
 [phases.install]
 cmds = [
   "npm install",
   "pip install matplotlib numpy plotly scipy pandas manim"
 ]
-
-[start]
-cmd = "node mcp-servers/python-server.js"
 
 
 
