--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Node.js/Express rewrite of the existing PHP app (front page + helpers).",
   "main": "server.js",
   "engines": {
-    "node": ">=18.0.0"
+    "node": "20.x"
   },
   "scripts": {
     "start": "node server.js",
